--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -2,6 +2,6 @@
 	background-image: url(./../img/app-dark.svg);
 }
 
-body.dark .icon-mastodon {
+body.theme--dark .icon-mastodon {
 	background-image: url(./../img/app.svg);
 }
