use node 16, adjust to new eslint config, improve style everywhere, use @nc/vue components...
Signed-off-by: Julien Veyssier <eneiluj@posteo.net>

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,7 +1,7 @@
 .icon-mastodon {
-	background-image: url(./../img/app-dark.svg);
+	background-image: url('../img/app-dark.svg');
 }
 
 body.theme--dark .icon-mastodon {
-	background-image: url(./../img/app.svg);
+	background-image: url('../img/app.svg');
 }
