--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,5 +1,6 @@
 .icon-mastodon {
 	background-image: url('../img/app-dark.svg');
+	filter: var(--background-invert-if-dark);
 }
 
 body.theme--dark .icon-mastodon {
